# pirata_core

./: .gitignore  pyproject.toml
pirata_core/: __init__.py  cache.py  comparator.py  config.py  ejecutar.py  notifier.py  oportunidades.py  precios.py  processor.py  reporte.py  scg.py  scrape_utils.py  scryfall.py
